remote enable preview